# DiscordBot

./: .env  .gitignore  Makefile  Pipfile  add.py  add_.py  add_member.py  battlenet.py  categories  categories.json  clean  config.py  database.py  db_commands.py  errors.py  example.json  getplayerinfo.sh  init.py  main.py  main_.py  maps.json  messaging.py  obwrole.py  player.info  player.stats  player_request.py  pyproject.toml  reactions.py  remove.py  replit.py  request.py  requirements.txt  retrieve.py  role.py  scrape.py  session.py  split  split.c  temp.py  tools.py  (+4 more)
Formatter/: Makefile  config.h  format  format.c  split
GET/: category  category.sh  dne  is_private  temp
cogs/: __init__.py  battlenet_handler.py  battlenet_handler.pyi  generic_listener.py  generic_listener.pyi  reaction_handler.py  reaction_handler.pyi  team_info_handler.py  team_info_handler.pyi
get/: category  comp  dne  is_private  stats
obw/: battlenet.py  compositions.py  config.py  database.py  db_keys.py  main.py  messaging.py  obw_errors.py  obwrole.py  reactions.py  request.py  scrape.py  test.py  tools.py
old/: database.py  main.py  scrape.py  tools.py
resources/: .gitignore  archived_commands.txt  db_types.py  maps.json  userdata.json
split/: .gitignore  split  split.c  split.mac  temp.txt
src/: __init__.py  battlenet.py  battlenet.pyi  bot.py  compositions.py  config.py  database.py  db.py  db_keys.py  main.py  messaging.py  obw_errors.py  obw_errors.pyi  obwrole.py  obwrole.pyi  ow_api.py  ranks.py  reactions.py  request.py  roles.py  roles.pyi  scrape.py  scrape.pyi  (+6 more)
(+14 files in other folders)
