[tool.poetry]
name = "repl_python3_DiscordBot"
version = "0.1.0"
description = ""
authors = ["Andrew Carpenter <andrewcarp00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Unidecode = "^1.3.2"
replit = "^3.2.4"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
